--- a/CodingEventsAPI/CodingEventsAPI.csproj
+++ b/CodingEventsAPI/CodingEventsAPI.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <TargetFramework>netcoreapp6.0</TargetFramework>
+        <TargetFramework>netcoreapp8.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -8,13 +8,15 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.2.1"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.0.2"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.2.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.0.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Data\Migrations"/>
+        <Folder Include="Data\Migrations" />
     </ItemGroup>
 </Project>
